--- a/config/hystrix-dashboard-dev.yml
+++ b/config/hystrix-dashboard-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: hystrix-dashboard
+  rabbitmq:
+    host: 176.114.20.187
+    port: 5672
+    username: admin
+    password: admin
     
 server:
   port: 4001
