--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,6 +5,11 @@ sp:
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 176.114.20.187
+    port: 5672
+    username: admin
+    password: admin
     
 #server: 
 #  port: 8101
